--- a/Resume Project/aaron-wright-resume.html
+++ b/Resume Project/aaron-wright-resume.html
@@ -52,9 +52,9 @@
                     Socials
                   </a>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="https://www.linkedin.com/in/aaron-wright-a01b391a7/">LinkedIn</a></li>
-                    <li><a class="dropdown-item" href="https://twitter.com/WrightAaronC">X/Twitter</a></li>
-                    <li><a class="dropdown-item" href="https://github.com/WrightAaronC">Github</a></li>
+                    <li><a class="dropdown-item" href="https://www.linkedin.com/in/aaron-wright-a01b391a7/" target="_blank">LinkedIn</a></li>
+                    <li><a class="dropdown-item" href="https://twitter.com/WrightAaronC" target="_blank">X/Twitter</a></li>
+                    <li><a class="dropdown-item" href="https://github.com/WrightAaronC" target="_blank">Github</a></li>
                   </ul>
                 </li>
               </ul>
@@ -140,6 +140,13 @@
         <div class="fjalla-one-regular"> February 2021 - January 2023 </div>
         <p class="fjalla-one-regular">WMUC Radio News is a student-run news program at the University of Maryland, broadcasting live from WMUC Radio 90.5-FM College Park. Through three radio news shows, student reporters cover a variety of news, including campus, sports, entertainment, and national news. As a member of WMUC-FM Radio News, I reported campus events and conducted interviews with students to create a piece by a given deadline, monitored social media trends for stories on Drop the Pop, created audio packages for future broadcast and anchored for Weekly Roundup.</p>
       </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row" id="works">
+      <h1 class="title">Works</h1>
+
 
     </div>
   </div>
