--- a/Resume Project/aaron-wright-resume.html
+++ b/Resume Project/aaron-wright-resume.html
@@ -144,9 +144,15 @@
   </div>
 
   <div class="container">
-    <div class="row" id="works">
-      <h1 class="title">Works</h1>
-
+    <div class="row" id="skills">
+      <h1 class="title">Skills</h1>
+      <ul class="bodytext">
+        <li>Experience with Adobe Premiere Pro and Audition.</li>
+        <li>Fantastic writing and reporting skills.</li>
+        <li>Knowledge on how to conduct research and use databases.</li>
+        <li><a href="https://www.youtube.com/live/QSXZN1eoGg8?si=4PnRNm5bplRcsTB6" target="_blank"></a>Great event organizer and M.C.(Click on me to see what I'm talking about)</li>
+        <li>Really funny guy (in a dry way)</li>
+      </ul>
 
     </div>
   </div>
