--- a/Resume Project/aaron-wright-resume.html
+++ b/Resume Project/aaron-wright-resume.html
@@ -151,6 +151,7 @@
         <li>Fantastic writing and reporting skills.</li>
         <li>Knowledge on how to conduct research and use databases.</li>
         <li><a href="https://www.youtube.com/live/QSXZN1eoGg8?si=4PnRNm5bplRcsTB6" target="_blank">Great event organizer and M.C.(Click on me to see what I'm talking about)</a></li>
+        <li>Decent HTML/CSS coder (Shout Out to Adam Marton @UMD!)</li>
         <li>Really funny guy (in a dry way)</li>
       </ul>
     </div>
