--- a/Resume Project/aaron-wright-resume.html
+++ b/Resume Project/aaron-wright-resume.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 
-    <head>
+  <head>
       <title>Aaron "A.C." Wright's Resume</title>
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <meta name="description" content="#MerrillMade from UMD">
@@ -20,9 +20,9 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap" rel="stylesheet">
-    </head>
+  </head>
 
-    <body>
+  <body>
         <!-- Navbar start-->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
           <div class="container-fluid">
@@ -156,6 +156,22 @@
       </ul>
     </div>
   </div>
+  
+  <div class="container">
+    <div class="row" id="works">
+      <h1 class="title">Proudest Works</h1>
+      <ul class="bodytext">
+        <li><a href="" target="_blank"></a></li>
+        <li><a href="" target="_blank"></a></li>
+        <li><a href="" target="_blank"></a></li>
+        <li><a href="" target="_blank"></a></li>
+        <li><a href="" target="_blank"></a></li>
+        <li><a href="" target="_blank"></a></li>
+        <li><a href="" target="_blank"></a></li>
+
+      </ul>
+    </div>
+  </div>
   <!--Grid ending-->
-    </body>
+  </body>
 </html>
