--- a/Resume Project/aaron-wright-resume.html
+++ b/Resume Project/aaron-wright-resume.html
@@ -161,13 +161,13 @@
     <div class="row" id="works">
       <h1 class="title">Proudest Works</h1>
       <ul class="bodytext">
-        <li><a href="" target="_blank"></a></li>
-        <li><a href="" target="_blank"></a></li>
-        <li><a href="" target="_blank"></a></li>
-        <li><a href="" target="_blank"></a></li>
-        <li><a href="" target="_blank"></a></li>
-        <li><a href="" target="_blank"></a></li>
-        <li><a href="" target="_blank"></a></li>
+        <li><a href="https://drive.google.com/file/d/1skFshdRDHn9x0EuKuNSSjhwnKN4WXbkY/view" target="_blank">"The Afro Files and Women's Basketball, with Brinae Alexander</a></li>
+        <li><a href="https://www.fauquier.com/lifestyles/picking-squash-tomatoes-and-eggplants-learning-to-farm-while-putting-food-on-the-table-for/article_6396f2b8-438b-11ee-938d-b7a6d5fdb183.html" target="_blank">Fauquier Education Farm offers learning for anyone with a growing green thumb</a></li>
+        <li><a href="https://www.blackexplosionnews.com/blog/2022/3/3/dawn-collins-talks-about-mental-health-at-nyumburu" target="_blank">Dawn Collins talks about mental health at Nyumburu</a></li>
+        <li><a href="https://www.thebaltimorebanner.com/education/kids-dont-have-access-to-enough-books-in-baltimores-book-deserts-one-street-librarian-is-among-those-trying-to-change-that-HKOOEZ5VTJAWFCC7QU7PBZRV4E/" target="_blank">Book Deserts in Baltimore</a></li>
+        <li><a href="https://www.thebaltimorebanner.com/community/criminal-justice/baltimore-county-police-investigating-accusations-of-molestation-at-an-owings-mills-daycare-following-dc-shooting-7GHY43BOZFBPDPRUCRGHGKAREY/" target="_blank">The beginning of the Shanteari Weems Saga</a></li>
+        <li><a href="https://open.spotify.com/episode/1oKLS8fB9l90uhr5jpRaYX" target="_blank">Offbeat: Inside the coolest All Niter UMD has ever pulled</a></li>
+        <li><a href="https://www.britannica.com/biography/Robert-Sengstacke-Abbott" target="_blank">Biography on Robert Sengstacke Abbott</a></li>
 
       </ul>
     </div>
