--- a/Resume Project/aaron-wright-resume.html
+++ b/Resume Project/aaron-wright-resume.html
@@ -168,8 +168,18 @@
         <li><a href="https://www.thebaltimorebanner.com/community/criminal-justice/baltimore-county-police-investigating-accusations-of-molestation-at-an-owings-mills-daycare-following-dc-shooting-7GHY43BOZFBPDPRUCRGHGKAREY/" target="_blank">The beginning of the Shanteari Weems Saga</a></li>
         <li><a href="https://open.spotify.com/episode/1oKLS8fB9l90uhr5jpRaYX" target="_blank">Offbeat: Inside the coolest All Niter UMD has ever pulled</a></li>
         <li><a href="https://www.britannica.com/biography/Robert-Sengstacke-Abbott" target="_blank">Biography on Robert Sengstacke Abbott</a></li>
-
       </ul>
+    </div>
+  </div>
+
+  <div class="card">
+    <div class="card-header">
+      Aaron Wright © 2024
+    </div>
+    <div class="card-body">
+      <h5 class="title">Thank you for reading my website!</h5>
+      <p class="bodytext">If you like what you see and you want me on your team, contact my email @ <a href="mailto:aaroncarter.wright@gmail.com">aaroncarter.wright@gmail.com</a></p>
+      <a href="#bannerhead" class="btn btn-primary">Go back to the top!</a>
     </div>
   </div>
   <!--Grid ending-->
