--- a/Resume Project/aaron-wright-resume.html
+++ b/Resume Project/aaron-wright-resume.html
@@ -173,7 +173,7 @@
   </div>
 
   <div class="card">
-    <div class="fjalla-one-regular">
+    <div class="card-header">
       Aaron Wright © 2024
     </div>
     <div class="card-body">
