--- a/Resume Project/aaron-wright-resume.html
+++ b/Resume Project/aaron-wright-resume.html
@@ -159,6 +159,7 @@
   
   <div class="container">
     <div class="row" id="works">
+      <img src="AaronAtWork.jpg" class="img-fluid" alt="Background for my proudest works" color="0,0,0, 0.5">
       <h1 class="titlespecial">Proudest Works</h1>
       <ul class="bodytext">
         <li><a href="https://drive.google.com/file/d/1skFshdRDHn9x0EuKuNSSjhwnKN4WXbkY/view" target="_blank">"The Afro Files" and Women's Basketball, with Brinae Alexander</a></li>
