--- a/Resume Project/aaron-wright-resume.html
+++ b/Resume Project/aaron-wright-resume.html
@@ -156,10 +156,9 @@
       </ul>
     </div>
   </div>
-  
+  <!--This container will soon have a background that's transparent to the content of my list. Aside from that, this resume project is functionally complete. Enjoy!-->
   <div class="container">
     <div class="row" id="works">
-      <img src="AaronAtWork.jpg" class="img-fluid" alt="Background for my proudest works" color="0,0,0, 0.5">
       <h1 class="titlespecial">Proudest Works</h1>
       <ul class="bodytext">
         <li><a href="https://drive.google.com/file/d/1skFshdRDHn9x0EuKuNSSjhwnKN4WXbkY/view" target="_blank">"The Afro Files" and Women's Basketball, with Brinae Alexander</a></li>
@@ -175,8 +174,7 @@
 
   <div class="card">
     <div class="card-header">
-      Aaron Wright © 2024
-    </div>
+      Aaron Wright © 2024</div>
     <div class="card-body">
       <h5 class="title">Thank you for reading my website!</h5>
       <p class="bodytext">If you like what you see and you want me on your team, contact my email @ <a href="mailto:aaroncarter.wright@gmail.com">aaroncarter.wright@gmail.com</a></p>
