--- a/Resume Project/aaron-wright-resume.html
+++ b/Resume Project/aaron-wright-resume.html
@@ -157,7 +157,7 @@
     </div>
   </div>
   <!--This container will soon have a background that's transparent to the content of my list. Aside from that, this resume project is functionally complete. Enjoy!-->
-  <div class="containerspecial">
+  <div class="container">
     <div class="row" id="works">
       <h1 class="titlespecial">Proudest Works</h1>
       <ul class="bodytext">
