--- a/Resume Project/aaron-wright-resume.html
+++ b/Resume Project/aaron-wright-resume.html
@@ -64,7 +64,7 @@
   <!-- Navbar end-->
 
   <!-- Hero start-->
- <div class="px-4-py-5-my-5-text-center">
+ <div class="px-4 py-5 my-5 text-center">
   <img src="Banner.png" class="img-fluid" alt="This is the banner" id="bannerhead">
     <h1 class="title">Aaron Wright's Resume!</h1>
     <div class="col-lg-6 mx-auto">
