For the Resume project

--- a/Resume-Project/aaron-wright-resume.html
+++ b/Resume-Project/aaron-wright-resume.html
@@ -157,9 +157,9 @@
     </div>
   </div>
   <!--This container will soon have a background that's transparent to the content of my list. Aside from that, this resume project is functionally complete. Enjoy!-->
-  <div class="containerspecial">
+  <div class="container">
     <div class="row" id="works">
-      <h1 class="titlespecial">Proudest Works</h1>
+      <h1 class="titlespecial">Works of Reportage</h1>
       <ul class="bodytext">
         <li><a href="https://drive.google.com/file/d/1skFshdRDHn9x0EuKuNSSjhwnKN4WXbkY/view" target="_blank">"The Afro Files" and Women's Basketball, with Brinae Alexander</a></li>
         <li><a href="https://www.fauquier.com/lifestyles/picking-squash-tomatoes-and-eggplants-learning-to-farm-while-putting-food-on-the-table-for/article_6396f2b8-438b-11ee-938d-b7a6d5fdb183.html" target="_blank">Fauquier Education Farm offers learning for anyone with a growing green thumb</a></li>
