--- a/html-frame/index.html
+++ b/html-frame/index.html
@@ -27,8 +27,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
 </head>
 
-<body>
-
+<body
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Navbar</a>
@@ -65,6 +64,10 @@
           </div>
         </div>
       </nav>
+
+      <div class="headline">The Headline Goes Here</div>
+
+      
 
 
       <footer class="footer mt-auto py-3 bg-dark">
