Html Frame Tings

--- a/html-frame/index.html
+++ b/html-frame/index.html
@@ -65,7 +65,19 @@
         </div>
       </nav>
 
-      <div class="headline">The Headline Goes Here</div>
+      <div class="container">
+        <div class="row">
+          <h1 class="Headline">Headline Goes Here</h1>
+          <h2 class="Byline">By Byline</h2>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row">
+          <h1 class="Chapter-Headline">Chapter Headline</h1>
+          <p class="bodytext"></p>
+        </div>
+      </div>
 
       
 
