--- a/html-frame/index.html
+++ b/html-frame/index.html
@@ -83,12 +83,20 @@
         </div>
       </div>
 
-      
+      <div class="px-4-py-5-my-5-text-center">
+        <img src="Hubble-Background-2.jpg" class="hero" alt="This is the Hero Image template">
+        <p class="caption">this is for the caption. Place Image or whatever here.</p>
+      </div>
 
+      <div class="container">
+        <div class="row">
+          <p class="bodytext">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vitae lorem vitae sem aliquet iaculis vel id lacus. Morbi finibus enim ac porta molestie. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed varius tincidunt sollicitudin. Maecenas sollicitudin magna vel urna vulputate condimentum. Vestibulum eleifend tellus nunc, quis vestibulum quam efficitur ac. Vestibulum mollis aliquet feugiat. Nulla a tincidunt eros, in consequat felis. Phasellus rhoncus luctus nulla, in consectetur justo laoreet vel. Integer pulvinar, elit vitae maximus egestas, leo massa posuere tellus, at tincidunt turpis ipsum id justo. Nullam risus ligula, ultrices in tempor quis, tempor convallis libero. Ut gravida mauris in viverra sodales. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+        </div>
+      </div>
 
-      <footer class="footer mt-auto py-3 bg-dark">
+      <footer class="footer mt-auto py-3 bg-light">
         <div class="container">
-          <span class="text-body-emphasis">Copyright 2023 WrightAaronC</span>
+          <span class="text-body-emphasis">Copyright 2024 WrightAaronC</span>
         </div>
      </footer>
 </body>
