--- a/html-frame/index.html
+++ b/html-frame/index.html
@@ -83,9 +83,11 @@
         </div>
       </div>
 
-      <div class="px-4-py-5-my-5-text-center">
-        <img src="Hubble-Background-2.jpg" class="hero" alt="This is the Hero Image template">
+      <div class="container">
+        <div class="hero">
+        <img src="Hubble-Background-2.jpg" alt="This is the Hero Image template">
         <p class="caption">this is for the caption. Place Image or whatever here.</p>
+        </div>
       </div>
 
       <div class="container">
