--- a/html-frame/index.html
+++ b/html-frame/index.html
@@ -85,7 +85,7 @@
 
       <div class="container">
         <div class="hero">
-        <img src="Hubble-Background-2.jpg" alt="This is the Hero Image template">
+        <img src="The King.jpg" alt="This is the Hero Image template">
         <p class="caption">this is for the caption. Place Image or whatever here.</p>
         </div>
       </div>
