--- a/html-frame/index.html
+++ b/html-frame/index.html
@@ -85,12 +85,8 @@
           <div class="col-10 col-sm-8 col-lg-6">
             <img src="Hubble-Background-2.jpg" 
             class="d-block mx-lg-auto img-fluid" 
-            alt="Hero Picture" width="700" height="500" loading="lazy">
-          </div>
-          <div class="col-lg-6">
+            alt="Hero Picture">
             <h1 class="caption">This is where the caption for the picture goes.</h1>
-            <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-            </div>
           </div>
         </div>
       </div>
