Text and stylesheet

--- a/html-frame/index.html
+++ b/html-frame/index.html
@@ -55,6 +55,12 @@
       </div>
     </nav>
 
+    <div class="container">
+      <div class="row">
+        <p class="bodytext">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer a ligula egestas, rutrum tortor vitae, eleifend purus. Duis porttitor lorem vel pulvinar varius. Sed viverra tellus finibus nulla tristique, quis hendrerit neque blandit. Cras magna dui, fermentum ac scelerisque vel, iaculis quis est. Fusce ultrices tincidunt neque, eget convallis metus dignissim a. Integer mauris nibh, porttitor a massa non, vestibulum tincidunt dui. Integer pulvinar libero non bibendum ornare. In nec nisl sed leo bibendum dictum. Cras a ante odio. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+      </div>
+    </div>
+
 
 
     <div class="px-4 py-5 my-5 text-center">
