--- a/html-frame/index.html
+++ b/html-frame/index.html
@@ -55,7 +55,7 @@
       </div>
     </nav>
     
-    
+
 
 
     <div class="container">
@@ -68,7 +68,7 @@
 
     <div class="px-4 py-5 my-5 text-center">
       <img src="Hubble-Background-2.jpg" class="img-fluid" alt="Hero picture">
-      <div class="col-lg-6 mx-auto">
+      <div class="row">
         <p class="caption">This is a caption for the hero image</p>
       </div>
     </div>
