--- a/html-frame/index.html
+++ b/html-frame/index.html
@@ -69,12 +69,16 @@
       </div>
     </div>
 
-
-
     <div class="px-4 py-5 my-5 text-center">
       <img src="Hubble-Background-2.jpg" class="img-fluid" alt="Hero picture">
       <div class="row">
         <p class="caption">This is a caption for the hero image</p>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <p class="bodytext">Sed blandit sodales nibh, a facilisis nulla cursus quis. Nunc vel neque lacus. Nulla quis erat viverra, ornare libero vitae, tempor augue. Donec lacinia, elit sed facilisis aliquam, arcu mauris molestie lorem, ac sodales quam leo eget ipsum. Cras mi risus, rhoncus at neque rhoncus, pharetra facilisis sapien. Sed nec magna at ex consectetur porta ullamcorper at ex. Maecenas in interdum ante. Sed iaculis, tortor vitae vehicula dapibus, dolor ligula ultricies urna, vel feugiat turpis est eget ligula. Morbi quam quam, iaculis nec lobortis nec, vestibulum vitae magna. Nullam scelerisque pharetra ante vel placerat. Morbi enim sapien, bibendum sed efficitur non, pretium rhoncus tortor. Aliquam neque lorem, viverra at lorem a, aliquet pharetra lacus. Phasellus tempor, ante eget convallis tempor, tellus orci mollis nulla, nec posuere sem tellus nec mi. Donec vitae dui facilisis, semper massa quis, varius lacus.</p>
       </div>
     </div>
 
