--- a/html-frame/index.html
+++ b/html-frame/index.html
@@ -62,9 +62,9 @@
       </div>
     </div>
 
-
     <div class="container">
       <div class="row">
+        <h2> Chapter Begins</h2>
         <p class="bodytext">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer a ligula egestas, rutrum tortor vitae, eleifend purus. Duis porttitor lorem vel pulvinar varius. Sed viverra tellus finibus nulla tristique, quis hendrerit neque blandit. Cras magna dui, fermentum ac scelerisque vel, iaculis quis est. Fusce ultrices tincidunt neque, eget convallis metus dignissim a. Integer mauris nibh, porttitor a massa non, vestibulum tincidunt dui. Integer pulvinar libero non bibendum ornare. In nec nisl sed leo bibendum dictum. Cras a ante odio. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
       </div>
     </div>
@@ -78,10 +78,22 @@
 
     <div class="container">
       <div class="row">
+        <h2>Chapter Begins</h2>
         <p class="bodytext">Sed blandit sodales nibh, a facilisis nulla cursus quis. Nunc vel neque lacus. Nulla quis erat viverra, ornare libero vitae, tempor augue. Donec lacinia, elit sed facilisis aliquam, arcu mauris molestie lorem, ac sodales quam leo eget ipsum. Cras mi risus, rhoncus at neque rhoncus, pharetra facilisis sapien. Sed nec magna at ex consectetur porta ullamcorper at ex. Maecenas in interdum ante. Sed iaculis, tortor vitae vehicula dapibus, dolor ligula ultricies urna, vel feugiat turpis est eget ligula. Morbi quam quam, iaculis nec lobortis nec, vestibulum vitae magna. Nullam scelerisque pharetra ante vel placerat. Morbi enim sapien, bibendum sed efficitur non, pretium rhoncus tortor. Aliquam neque lorem, viverra at lorem a, aliquet pharetra lacus. Phasellus tempor, ante eget convallis tempor, tellus orci mollis nulla, nec posuere sem tellus nec mi. Donec vitae dui facilisis, semper massa quis, varius lacus.</p>
       </div>
     </div>
 
+    <footer>
+      <div class="card">
+        <div class="card-header">
+        Footer
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Special title treatment</h5>
+          <p class="card-text">Copyright 2024 Aaron C. Wright.</p>
+        </div>
+      </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
