--- a/data-viz-project-A.C/index.html
+++ b/data-viz-project-A.C/index.html
@@ -61,6 +61,12 @@
         </div>
       </div>
     </nav>
+
+    <div class="topper">
+      <div class="row">
+        <p>The Afro Files Newspub</p>
+      </div>
+    </div>
     
     <div class="container">
       <div class="row">
