--- a/data-viz-project-A.C/index.html
+++ b/data-viz-project-A.C/index.html
@@ -75,6 +75,15 @@
       </div>
     </div>
 
+    <div class="px-4 py-5 my-5 text-center">
+      <img src="desert-air-book-george-steinmetz.jpg" class="img-fluid" alt="Hero picture">
+      <div class="row">
+        <p class="caption">An image from George Steinmetz's book "Desert Air." Used as an artiistic interpretation for the topic of this story
+          (Conde Nast Traveler)
+        </p>
+      </div>
+    </div>
+
     <div class="container bodytext">
       <div class="row">
         <h2 class="stoke-regular"> Chapter Begins</h2>
