--- a/data-viz-project-A.C/index.html
+++ b/data-viz-project-A.C/index.html
@@ -134,6 +134,8 @@
         <p>Aside from offering books for checkout, the Pratt system has bookmobiles and a mobile job center that travel to neighborhoods to serve those who might not have the time or resources to visit their nearest library.</p>
           
         <p>Maze believes that her efforts to provide free books to kids complement Pratt’s efforts.</p>
+
+        <p>“The library can’t do everything, so [Storybook Maze] is here to support them in that,” Maze said.</p>
       </div>
     </div>
 
@@ -143,8 +145,7 @@
         Footer
         </div>
         <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">Copyright 2024 Aaron C. Wright.</p>
+          <h5 class="card-title">Copyright 2024 Aaron C. Wright</h5>
         </div>
       </div>
     </footer>
