--- a/data-viz-project-A.C/index.html
+++ b/data-viz-project-A.C/index.html
@@ -118,7 +118,7 @@
 
     <div class="container bodytext">
       <div class="row">
-        <h2>Enoch Pratt Free Library system</h2>
+        <h2 class="stoke-regular">Enoch Pratt Free Library system</h2>
         <div class="px-4 py-5 my-5 text-center">
           <img src="prattlibrary.jpg" class="img-fluid" alt="Hero picture">
           <div class="row">
