--- a/data-viz-project-A.C/index.html
+++ b/data-viz-project-A.C/index.html
@@ -160,6 +160,19 @@
       </div>
     </div>
 
+    <div class="container bodytext">
+      <div class="row">
+        <h2 class="stoke-regular">Little Free Library and community efforts</h2>
+        <div class="px-4 py-5 my-5 text-center">
+          <img src="littlefreelibrary.jpg" class="img-fluid" alt="Hero picture">
+          <div class="row">
+            <p class="caption">This is one of the thousands of Little Free Libraries, scattered all across the country (Jessica LaRusso/5280 Magazine).</p>
+          </div>
+        </div>
+        <p></p>
+      </div>
+    </div>
+
     <footer>
       <div class="card">
         <div class="card-header">
