--- a/data-viz-project-A.C/index.html
+++ b/data-viz-project-A.C/index.html
@@ -213,6 +213,7 @@
         </div>
         <div class="card-body">
           <h5 class="card-title">Copyright 2024 Aaron C. Wright</h5>
+          <p class="bodytext">If you like what you see and you want me on your team, contact my email @ <a href="mailto:aaroncarter.wright@gmail.com">aaroncarter.wright@gmail.com</a></p>
         </div>
       </div>
     </footer>
