--- a/data-viz-project-A.C/index.html
+++ b/data-viz-project-A.C/index.html
@@ -183,7 +183,7 @@
           
         <p>The Book Thing of Baltimore also gives away free books once a month on the weekends, and are also accepting book donations.</p>
 
-        <h2 class="container bodytext">'Kids need to see themselves in books'</h2>
+        <h2 class="stoke-regular">'Kids need to see themselves in books'</h2>
         <p>One of the ways that Maze is thinking about getting children’s books to as many kids as possible is using vending machines to dispense free books instead of snacks. She plans to place these vending machines at high-traffic areas, including laundromats, general markets, hospitals and more.</p>
 
         <p>Maze hopes that by reaching out to community leaders and organizations, she can eventually schedule and set up more free pop-up book stands like the one she initially established with Tendea Family, an organization that works to support Black communities in Baltimore. With every pop-up book stand, she uses her knowledge as a librarian to curate books to meet the community’s needs.</p>
