--- a/data-viz-project-A.C/index.html
+++ b/data-viz-project-A.C/index.html
@@ -162,6 +162,11 @@
       </div>
     </div>
 
+    <div class="container">
+      <iframe title="Location of Enoch Pratt Libraries and Notable Bookstores" aria-label="Locator map" id="datawrapper-chart-33vSJ" src="https://datawrapper.dwcdn.net/33vSJ/4/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="760" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
+      </script>
+    </div>
+
     <div class="container bodytext">
       <div class="row">
         <h2 class="stoke-regular">Little Free Library and community efforts</h2>
