--- a/data-viz-project-A.C/index.html
+++ b/data-viz-project-A.C/index.html
@@ -98,6 +98,8 @@
         <h2 class="stoke-regular">What's a book desert?</h2>
         <p>The group Unite for Literacy coined the term “book desert” to describe a geographic area where print books and other reading materials are hard to obtain. They are usually located in areas of high poverty and income inequality. The lack of books in a child’s reading development can negatively affect one’s vocabulary and ability to recognize words.</p>
 
+        <div id="pullquotefloat">“What we really need to be talking about is ‘What do we want for our kids?’ And we want them to be lifelong readers.” - Mike McGuffee, CEO of Unite for Literacy</div>
+
         <p>Baltimore City has a lot of book deserts, according to a global book desert map that Unite For Literacy made. The map shows the estimated percentage of homes with more than 100 books in areas of the city — and for the vast majority of East and West Baltimore, that figure is in the single digits. It also shows higher figures in some North Baltimore neighborhoods — for example, there’s an estimated 79% of homes that meet that criteria in Roland Park.</p>
 
         <p>“We have in our communities, areas where there is a lack of resources to kids becoming lifelong readers,” said Mike McGuffee, CEO of Unite for Literacy.</p>
