--- a/data-viz-project-A.C/index.html
+++ b/data-viz-project-A.C/index.html
@@ -78,7 +78,7 @@
     <div class="px-4 py-5 my-5 text-center">
       <img src="desert-air-book-george-steinmetz.jpg" class="img-fluid" alt="Hero picture">
       <div class="row">
-        <p class="caption">An image from George Steinmetz's book "Desert Air." Used as an artiistic interpretation for the topic of this story
+        <p class="caption">An image from George Steinmetz's book "Desert Air." Used as an artistic interpretation for the topic of this story
           (Conde Nast Traveler)
         </p>
       </div>
