Restructuring my works
For now, I'll hold off on updating my website to include multiple webpages. I also included a "Special Project" section.

--- a/Resume-Project/aaron-wright-resume.html
+++ b/Resume-Project/aaron-wright-resume.html
@@ -159,17 +159,37 @@
   <!--This container will soon have a background that's transparent to the content of my list. Aside from that, this resume project is functionally complete. Enjoy!-->
   <div class="container">
     <div class="row" id="works">
-      <h1 class="titlespecial">Works of Reportage</h1>
+      <div class="col-md-6">
+      <h1 class="titlespecial">Print Works</h1>
       <ul class="bodytext">
-        <li><a href="https://www.britannica.com/biography/Robert-Sengstacke-Abbott" target="_blank">Biography on Robert Sengstacke Abbott</a></li>
-        <li><a href="https://drive.google.com/file/d/1skFshdRDHn9x0EuKuNSSjhwnKN4WXbkY/view" target="_blank">"The Afro Files" and Women's Basketball, with Brinae Alexander</a></li>
-        <li><a href="https://www.fauquier.com/lifestyles/picking-squash-tomatoes-and-eggplants-learning-to-farm-while-putting-food-on-the-table-for/article_6396f2b8-438b-11ee-938d-b7a6d5fdb183.html" target="_blank">Fauquier Education Farm offers learning for anyone with a growing green thumb</a></li>
-        <li><a href="https://www.blackexplosionnews.com/blog/2022/3/3/dawn-collins-talks-about-mental-health-at-nyumburu" target="_blank">Dawn Collins talks about mental health at Nyumburu</a></li>
+        <li><a href="https://www.britannica.com/topic/Deadpool-character" target="_blank">Britannica page on Deadpool</a></li>
+        <li><a href="https://www.britannica.com/biography/Robert-Sengstacke-Abbott" target="_blank">Britannica page on Robert Sengstacke Abbott</a></li>
+        <li><a href="https://www.blackexplosionnews.com/blog/2024/5/8/black-university-students-speak-on-sjp-sit-ins-at-mckeldin-mall" target="_blank">Black UMD speak on SJP sit-ins at McKeldin Mall (cowrite with the fantastic Mario Morais)</a></li>
+        <li><a href="4Js Farm and Brewery aims to be a community hub _ News _ fauquier.com.pdf" target="_blank">4Js Farm and Brewery aims to be a community hub</a></li>
+        <li><a href="Picking squash, tomatoes, and eggplants_ Learning to farm while putting food on the table for needy families _ Lifestyles _ fauquier.com.pdf" target="_blank">Fauquier Education Farm offers learning for anyone with a growing green thumb</a></li>
         <li><a href="Kids don’t have access to enough books in Baltimore’s ‘book deserts.’ One ‘street librarian’ is among those trying to change that - The Baltimore Banner.pdf" target="_blank">Book Deserts in Baltimore</a></li>
         <li><a href="Baltimore County police investigating accusations of molestation at an Owings Mills day care following D.C. shooting - The Baltimore Banner.pdf" target="_blank">The beginning of the Shanteari Weems Saga</a></li>
-        <li><a href="https://open.spotify.com/episode/1oKLS8fB9l90uhr5jpRaYX" target="_blank">Offbeat: Inside the coolest All Niter UMD has ever pulled</a></li>
-        
       </ul>
+      </div>
+
+      <div class="col-md-6"></div>
+      <h1 class="titlespecial">Audio Works and Appearance</h1>
+      <ul class="bodytext">
+        <li><a href="https://drive.google.com/file/d/1PiJH3U0MnwcF_jXsABuAvbdcD6LfXWa-/view?usp=drive_link" target="_blank">Innagural episode of "The Afro Files"</a></li>
+        <li><a href="https://drive.google.com/file/d/1skFshdRDHn9x0EuKuNSSjhwnKN4WXbkY/view" target="_blank">"The Afro Files" and Women's Basketball, with Brinae Alexander</a></li>
+        <li><a href="https://open.spotify.com/episode/1oKLS8fB9l90uhr5jpRaYX" target="_blank">Offbeat: Inside the coolest All Niter UMD has ever pulled</a></li>
+        <li><a href="https://open.spotify.com/episode/1K5k3qrzXdlMDPWrBQ9diT?si=560a41ce46d84812" target="_blank">Offbeat: How are Terps making sense of the AI Era</a></li>
+        <li><a href="https://open.spotify.com/episode/2y3YwHKgkXeAjOyDr1VVgu?si=e6a332f039b4479d" target="_blank">Offbeat: UMD Native and Indigenous alumni teach staff and students how to Powwow</a></li>
+        <li><a href="https://www.weaa.org/show/two-way-talk/2022-07-27/retired-baltimore-officer-shot-by-wife-is-accused-of-assaulting-children-at-her-daycare" target="_blank">Appearance on WEAA 88.9FM about Shanteari Weems</a></li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <h1 class="title">Special Project</h1>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/2nWjhqYMGrs?si=fnGXnRaGsX_jDObh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <p class="bodytext">This is a project that I organized and planned from January 2024 to April 2024. By working with the Philip Merrill College of Journalism, the University of Maryland, College Park's Special Collection and Archives division, La Voz Latina and the Black Explosion, I hosted a pannel discussion on the intersection of journalism and activism. Please take a watch and learn something new!</p>
     </div>
   </div>
 
