--- a/Resume-Project/aaron-wright-resume.html
+++ b/Resume-Project/aaron-wright-resume.html
@@ -172,7 +172,7 @@
       </ul>
       </div>
 
-      <div class="col-md-6"></div>
+      <div class="col-md-6">
       <h1 class="titlespecial">Audio Works and Appearance</h1>
       <ul class="bodytext">
         <li><a href="https://drive.google.com/file/d/1PiJH3U0MnwcF_jXsABuAvbdcD6LfXWa-/view?usp=drive_link" target="_blank">Innagural episode of "The Afro Files"</a></li>
@@ -182,6 +182,7 @@
         <li><a href="https://open.spotify.com/episode/2y3YwHKgkXeAjOyDr1VVgu?si=e6a332f039b4479d" target="_blank">Offbeat: UMD Native and Indigenous alumni teach staff and students how to Powwow</a></li>
         <li><a href="https://www.weaa.org/show/two-way-talk/2022-07-27/retired-baltimore-officer-shot-by-wife-is-accused-of-assaulting-children-at-her-daycare" target="_blank">Appearance on WEAA 88.9FM about Shanteari Weems</a></li>
       </ul>
+      </div>
     </div>
   </div>
 
