--- a/Resume-Project/aaron-wright-resume.html
+++ b/Resume-Project/aaron-wright-resume.html
@@ -147,12 +147,11 @@
     <div class="row" id="skills">
       <h1 class="title">Skills</h1>
       <ul class="bodytext">
-        <li>Experience with Adobe Premiere Pro and Audition.</li>
-        <li>Fantastic writing and reporting skills.</li>
-        <li>Knowledge on how to conduct research and use databases.</li>
-        <li><a href="https://www.youtube.com/live/QSXZN1eoGg8?si=4PnRNm5bplRcsTB6" target="_blank">Great event organizer and M.C.(Click on me to see what I'm talking about)</a></li>
-        <li>Decent HTML/CSS coder (Shout Out to Adam Marton @UMD!)</li>
-        <li>Really funny guy (in a dry way)</li>
+        <li>Editing: Print, Adobe Audition, Adobe Premire Pro.</li>
+        <li>Writing: AP Style, Broadcast</li>
+        <li>Research: Word Cat, LexisNexis, FOIA requests, court filings.</li>
+        <li>Coding: HTML and CSS (Shout Out to Adam Marton @UMD!)</li>
+        <li>Interpersonal Skills: really funny guy (in a dry way), great event organizer and M.C., leadership experience (Eagle Scout, CSS Team Leader, College Park Scholars Team Captain), persistent and dilligent.</li>
       </ul>
     </div>
   </div>
