--- a/Resume-Project/aaron-wright-resume.html
+++ b/Resume-Project/aaron-wright-resume.html
@@ -112,7 +112,7 @@
     <div class="row" id="experience">
       <h1 class="title">Experience</h1>
       <div class="bodytext">
-        <h2 class="newsreader-regular">Newsroom Intern</h2>
+        <h2 class="newsreader-regular">Reporter</h2>
         <div class="fjalla-one-regular">The Fauquier Times</div>
         <div class="fjalla-one-regular">August 2023</div>
         <p class="fjalla-one-regular">The Fauquier Times is a hyperlocal newspaper located in Warrenton, Virginia. As a newsroom intern I,
@@ -120,14 +120,14 @@
       </div>
 
       <div class="bodytext">
-        <h2 class="newsreader-regular">Newsroom Intern</h2>
+        <h2 class="newsreader-regular">Reporter</h2>
         <div class="fjalla-one-regular">The Baltimore Banner</div>
         <div class="fjalla-one-regular">June 2022 - August 2022</div>
         <p class="fjalla-one-regular">As newsroom intern and part of the first Baltimore Banner internship cohort, I reported on education, lifestyle, arts and culture and crime stories within the Baltimore area, learned great journalism insights from onstaff reporters through The Baltimore Banners Brown Bag Lunch, assisted with primary election coverage by interviewing Baltimore voters and helping the data team and I wrote a separate story on book deserts that got picked up and distributed by The Associated Press.</p>
       </div>
 
       <div class="bodytext">
-        <h2 class="newsreader-regular">Journalist and Leader</h2>
+        <h2 class="newsreader-regular">Reporter and Leader</h2>
         <div class="fjalla-one-regular">The Black Explosion</div>
         <div class="fjalla-one-regular">September 2021 - May 2024</div>
         <p class="fjalla-one-regular">The Black Explosion is the University of Marylands first and only Black newspaper since 1968. Sponsored by the Nyumburu Cultural Center, the Black Explosion has served to be a voice for the Black community in the University of Maryland by covering the stories that matter to the community. As a staff writer for the Black Explosion, I reported on various campus events and conducted interviews with students to create stories for Black UMD, delivered story pitches to editors for further consideration and photographed pictures for stories to use as graphics.</p>
