--- a/Resume-Project/aaron-wright-resume.html
+++ b/Resume-Project/aaron-wright-resume.html
@@ -33,10 +33,7 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#about-me">About Me.</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#education">Education</a>
+                  <a class="nav-link active" aria-current="page" href="#works">Works.</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#experience">Experience</a>
@@ -44,8 +41,11 @@
                 <li class="nav-item">
                   <a class="nav-link" href="#skills">Skills</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#about-me">About Me</a>
+                </li>
                 <li class="nav-item-special">
-                  <a class="nav-link" href="#works">Works</a>
+                  <a class="nav-link" href="#education">Education</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="true">
