--- a/Resume-Project/aaron-wright-resume.html
+++ b/Resume-Project/aaron-wright-resume.html
@@ -121,11 +121,22 @@
     <div class="row" id="experience">
       <h1 class="title">Experience</h1>
       <div class="bodytext">
+        <h2 class="newsreader-regular">Editorial Staff</h2>
+        <div class="fjalla-one-regular">Encyclopaedia Britannica</div>
+        <div class="fjalla-one-regular">June 2024 - August 2024</div>
+        <p class="fjalla-one-regular">Encyclopaedia Britannica is known for publishing the world's oldest continuously published encyclopaedia. While they're mainly online, Britannica continues to publish accurate information on just about everything.</p>
+        <ul class="bodytext">
+          <li>Fact-checked articles on people, biology and companies and kept them up to date</li>
+          <li>Wrote extensive revisions on historical figures and news publications</li>
+          <li>Monitored media tags to make sure news stories are linked to the proper entry</li>
+        </ul>
+      </div>
+      <div class="bodytext">
         <h2 class="newsreader-regular">Reporter</h2>
         <div class="fjalla-one-regular">The Fauquier Times</div>
         <div class="fjalla-one-regular">August 2023</div>
-        <p class="fjalla-one-regular">The Fauquier Times is a hyperlocal newspaper located in Warrenton, Virginia. As a newsroom intern I,
-        reported on education, agriculture and wrote a lifestyle feature story on a local brewery</p>
+        <p class="fjalla-one-regular">The Fauquier Times is a hyperlocal newspaper located in Warrenton, Virginia.</p>
+        <li>Reported on education, agriculture and wrote a lifestyle feature story on a local brewery.</li>
       </div>
 
       <div class="bodytext">
