--- a/Resume-Project/aaron-wright-resume.html
+++ b/Resume-Project/aaron-wright-resume.html
@@ -144,10 +144,12 @@
         <div class="fjalla-one-regular">The Baltimore Banner</div>
         <div class="fjalla-one-regular">June 2022 - August 2022</div>
         <p class="fjalla-one-regular">The Baltimore Banner is a nonprofit, all-digital news publication. Launching on June 13, 2022, The Banner serves "to be an indespensable resource that strengthens, unites and inspires our Baltimore community."</p>
-        <li>Became part of the first Baltimore Banner internship cohort.</li>
-        <li>Wrote a story on book deserts, which got picked up and distributed by the Associated Press.</li>
-        <li>Appeared on WEAA 88.9 FM to discuss my reporting and thoughts on an ongoing crime story.</li>
-        <li>Worked with the wider Baltimore Banner team to canvas quotes and conduct interviews about the 2022 primary election.</li>
+        <ul class="bodytext">
+          <li>Became part of the first Baltimore Banner internship cohort.</li>
+          <li>Wrote a story on book deserts, which got picked up and distributed by the Associated Press.</li>
+          <li>Appeared on WEAA 88.9 FM to discuss my reporting and thoughts on an ongoing crime story.</li>
+          <li>Worked with the wider Baltimore Banner team to canvas quotes and conduct interviews about the 2022 primary election.</li>
+        </ul>
       </div>
 
       <div class="bodytext">
@@ -155,22 +157,29 @@
         <div class="fjalla-one-regular">The Black Explosion</div>
         <div class="fjalla-one-regular">September 2021 - May 2024</div>
         <p class="fjalla-one-regular">The Black Explosion is the University of Marylands first and only Black newspaper since 1970. Sponsored by the Nyumburu Cultural Center, the Black Explosion has served to be a voice for the Black community in the University of Maryland by covering the stories that matter to the community. As a staff writer for the Black Explosion, I:</p>
-        <li>Reported on student-led protests and Black events/issues in the UMD community.</li>
-        <li>Took photos of protests, events and conferences, then edited them to be later uploaded to our website.</li>
+        <ul class="bodytext">
+          <li>Reported on student-led protests and Black events/issues in the UMD community.</li>
+          <li>Took photos of protests, events and conferences, then edited them to be later uploaded to our website.</li>
+        </ul>
         <p class="fjalla-one-regular">In August, 2023, I became the Co-Editor-In-Chief. As an Editor-in-Chief, I:</p>
-        <li>Lead pitch-and-staff meetings and created engaging Google Slides for those meetings.</li>
-        <li>Edited and guided stories on campus protests, the Purple Line affecting UMD, Black clubs and events, abd movie screenings, from inception to publication.</li>
-        <li>Delegated social media engagemnt to another editor and team, leading to tremendous gains in our follower base.</li>
+        <ul class="bodytext">
+          <li>Lead pitch-and-staff meetings and created engaging Google Slides for those meetings.</li>
+          <li>Edited and guided stories on campus protests, the Purple Line affecting UMD, Black clubs and events, abd movie screenings, from inception to publication.</li>
+          <li>Delegated social media engagemnt to another editor and team, leading to tremendous gains in our follower base.</li>
+        </ul>
       </div>
 
       <div class="bodytext">
-        <h2 class="newsreader-regular">Staff Writer and Anchor</h2>
-        <div class="fjalla-one-regular">WMUC-FM Radio News</div>
+        <h2 class="newsreader-regular">Staff Writer, Anchor and Host</h2>
+        <div class="fjalla-one-regular">WMUC-FM</div>
         <div class="fjalla-one-regular"> February 2021 - January 2023 </div>
-        <p class="fjalla-one-regular">WMUC Radio News is a student-run news program at the University of Maryland, broadcasting live from WMUC Radio 90.5-FM College Park.</p>
-        <li>Reported on a vigil for the Asian Ameican community, created a sound package and delivered it for the news segment</li>
-        <li>Monitored social media trends for stories on Drop the Pop, WMUC news' arts and entertainment segment.</li>
-        <li>Anchored on Weekly Roundup, where I gave the rundown on daily campus life and Prince George's County news.</li>
+        <p class="fjalla-one-regular">WMUC-FM is a student-run radio station at the University of Maryland, broadcasting live from WMUC Radio 90.5-FM College Park. Across the radio waves and their digital site WMUC Digital, they provide original programming and news to the UMD community.</p>
+        <ul class="bodytext">
+          <li>Reported on a vigil for the Asian Ameican community, created a sound package and delivered it for the news segment</li>
+          <li>Monitored social media trends to write stories on Drop the Pop, WMUC news' arts and entertainment segment.</li>
+          <li>Anchored on Weekly Roundup, where I gave the rundown on daily campus life and Prince George's County news.</li>
+          <li>On WMUC Digital, I hosted my own show called "The Afro Files," where every week I discuss Black topics and issues across the diaspora. In one story, I interviewed a former UMD Women's Basketball player.</li>
+        </ul>
       </div>
     </div>
   </div>
