--- a/Resume-Project/aaron-wright-resume.html
+++ b/Resume-Project/aaron-wright-resume.html
@@ -89,6 +89,7 @@
         <li><a href="https://www.blackexplosionnews.com/blog/2024/5/8/black-university-students-speak-on-sjp-sit-ins-at-mckeldin-mall" target="_blank">Black UMD speak on SJP sit-ins at McKeldin Mall (cowrite with the fantastic Mario Morais)</a></li>
         <li><a href="4Js Farm and Brewery aims to be a community hub _ News _ fauquier.com.pdf" target="_blank">4Js Farm and Brewery aims to be a community hub</a></li>
         <li><a href="Picking squash, tomatoes, and eggplants_ Learning to farm while putting food on the table for needy families _ Lifestyles _ fauquier.com.pdf" target="_blank">Fauquier Education Farm offers learning for anyone with a growing green thumb</a></li>
+        <li><a href="https://baltimorebeat.com/baltimore-student-union-members-want-to-speak-for-themselves/" target="_blank">Baltimore Student Union</a></li>
         <li><a href="Kids don’t have access to enough books in Baltimore’s ‘book deserts.’ One ‘street librarian’ is among those trying to change that - The Baltimore Banner.pdf" target="_blank">Book Deserts in Baltimore</a></li>
         <li><a href="Baltimore County police investigating accusations of molestation at an Owings Mills day care following D.C. shooting - The Baltimore Banner.pdf" target="_blank">The beginning of the Shanteari Weems Saga</a></li>
       </ul>
